fix some overflow issues in task cards

--- a/src/app/features/boards/components/board-group-card/board-group-card.component.scss
+++ b/src/app/features/boards/components/board-group-card/board-group-card.component.scss
@@ -8,11 +8,13 @@
   cursor: pointer;
   margin-bottom: .3rem;
   border: 0 !important;
+  overflow: hidden;
 }
 
 .task-name-text {
   margin-bottom: 0;
   line-height: 1.4rem;
+  word-break: break-word;
 }
 
 .card-footer {
